[package]
name = "trellis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.14"  # For using protobuf types
tokio = "1.0"

[build-dependencies]
prost-build = "0.14"  # For compiling .proto files during build
